css/layout.css
.hidden {
  display: none !important;
}

body {
  background-color: rgb(240, 240, 240);
}

.container {
  max-width: 575px;
  margin: 0 auto;
  padding: 0 1.5rem;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

.column-full,
.column-half {
  width: 100%;
}

.flex-direction-column {
  flex-direction: column;
}

.purple-background {
  background-color: rgb(86, 43, 129);
  color: white;
}

.display-flex {
  display: flex;
}

.font-header {
  font-family: 'Proza Libre', sans-serif;
}

.font-body,
input {
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

@media screen and (min-width: 768px) {
  .container {
    max-width: 900px;
  }

  .column-full,
  .column-half {
    padding: 0 0.75rem;
  }

  .column-half {
    width: 50%;
  }

  img {
    width: 100%;
    height: 15.8rem;
    object-fit: cover;
    margin: 0.5rem 0 0.1rem 0;
  }
}

img {
  width: 100%;
  height: 21.5rem;
  object-fit: cover;
  margin: 0.5rem 0 0.1rem 0;
}

.note-height {
  height: 9.6rem;
}

.margin-zero {
  margin: 0;
}

.header-padding {
  padding: 0.8rem 0;
}

.header-font {
  font-size: 1.3rem;
}

.button {
  border: none;
  border-radius: 0.2rem;
  padding: 0.35rem 1.3rem;
  margin: 1rem 0;
  font-size: 1rem;
}

.font-bold {
  font-weight: 700;
}

label {
  font-size: 1.08rem;
  margin: 1rem 0 0.7rem 0;
}

input,
textarea {
  height: 2.5rem;
  margin: 0 0 0.8rem 0;
  font-size: 1rem;
  padding: 0.4 1rem;
}

.padding {
  padding: 0.5rem;
}

